EP-4336 (#1511)
* EP-4336

* jacoco fix